--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
 
 :root {
-  font-family: Chewy;
+  font-family: Roboto Mono;
   line-height: 1.5;
-  font-weight: 200;
+  font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -38,6 +38,6 @@ h1 {
 }
 
 @font-face {
-  font-family: Chewy;
-  src: url(./assets/fonts/Chewy.ttf);
+  font-family: Roboto Mono;
+  src: url(./assets/fonts/RobotoMono-VariableFont_wght.ttf);
 }
