--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,13 @@ h1 {
   }
 }
 
+@media screen and (max-height: 760px) {
+  :root {
+    overflow-y: scroll;
+    font-size: 0.8em;
+  }
+}
+
 @font-face {
   font-family: Roboto Mono;
   src: url(./assets/fonts/RobotoMono-VariableFont_wght.ttf);
